# axiomtrade-rs

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: docs.yml
docs/: book.toml
docs/book/: 404.html  automatic-otp.html  environment-setup.html  index.html  installation.html  print.html  quick-start.html  searchindex.js  toc.html  toc.js
docs/book/api/: market-data.html  notifications.html  portfolio.html  trading.html  turnkey.html  websocket.html
docs/book/auth/: login.html  otp.html  sessions.html  tokens.html
docs/book/best-practices/: error-handling.html  performance.html  rate-limiting.html  security.html
docs/book/examples/: advanced.html  authentication.html  portfolio.html  trading.html  websocket.html
docs/book/reference/: changelog.html  configuration.html  endpoints.html  error-codes.html
docs/book/theme/: custom.css  custom.js
docs/book/troubleshooting/: common-issues.html  debugging.html  faq.html
docs/src/: SUMMARY.md  automatic-otp.md  environment-setup.md  installation.md  introduction.md  quick-start.md
docs/src/api/: market-data.md  notifications.md  portfolio.md  trading.md  turnkey.md  websocket.md
docs/src/auth/: login.md  otp.md  sessions.md  tokens.md
docs/src/best-practices/: error-handling.md  performance.md  rate-limiting.md  security.md
docs/src/examples/: advanced.md  authentication.md  portfolio.md  trading.md  websocket.md
docs/src/reference/: changelog.md  configuration.md  endpoints.md  error-codes.md
docs/src/troubleshooting/: common-issues.md  debugging.md  faq.md
docs/theme/: custom.css  custom.js
examples/: README.md  README_EXAMPLES.md
examples/advanced/: automated_trading_bot.rs  high_frequency_trading.rs  multi_chain_portfolio.rs
examples/authentication/: basic_login.rs  cookie_auth.rs  otp_verification.rs  session_management.rs
examples/infrastructure/: health_checks.rs
examples/market_data/: trending_tokens.rs
examples/notifications/: email_notifications.rs  price_alerts.rs  system_alerts.rs
examples/portfolio/: batch_balances.rs  get_portfolio.rs  portfolio_monitoring.rs  token_accounts.rs
examples/setup/: README.md  auto_otp_setup.md  environment_setup.rs  setup_env.rs  test_auto_otp.rs
examples/trading/: simple_trade.rs
examples/turnkey/: turnkey_auth.rs
examples/websocket/: basic_websocket.rs  price_subscriptions.rs
src/: errors.rs  lib.rs
src/api/: hyperliquid.rs  infrastructure.rs  market_data.rs  mod.rs  notifications.rs  portfolio.rs  social.rs  trading.rs  turnkey.rs
src/auth/: client.rs  error.rs  mod.rs  session_manager.rs  token_manager.rs  types.rs
src/client/: enhanced_client.rs  mod.rs
src/email/: mod.rs  otp_fetcher.rs
src/models/: hyperliquid.rs  infrastructure.rs  market.rs  mod.rs  notifications.rs  portfolio.rs  portfolio_v5.rs  social.rs  trading.rs  turnkey.rs
src/utils/: env_loader.rs  mod.rs  p256_crypto.rs  password.rs  rate_limiter.rs  retry.rs  user_agents.rs
src/websocket/: client.rs  handler.rs  messages.rs  mod.rs
